--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "peerflix-server",
+  "name": "peerflix-server-rus",
   "version": "0.4.2",
-  "author": "Aliaksei Sapach <dreamsonic@tut.by>",
+  "author": "Sergey Felyugin<silvetrs56@yahoo.com>",
   "description": "Streaming torrent client for node.js with web ui.",
   "bin": {
     "peerflix-server": "./server/bin.js"
@@ -14,7 +14,7 @@
   "main": "./server/bin.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/asapach/peerflix-server.git"
+    "url": "https://github.com/serfel/peerflix-server-rus.git"
   },
   "keywords": [
     "bittorrent",
