Дальнейшая фиксация ограничений английского языка

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "peerflix-server",
+  "name": "peerflix-server-rus",
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.16",
